<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/app_default_background"
    >
    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_app_name_login"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"/>
    <TextView
        android:text="@string/app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/text_app_slogan_login"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/etxUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etxPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnSignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        />

    <TextView android:id="@+id/linkForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:linksClickable="true"
        android:textColor="@drawable/layout_textview_clickable_selector"/>
</LinearLayout>
