<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFooter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:id="@+id/vFooterSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/footer_item_separator_background_color"/>
    <TextView
        android:id="@+id/tvFooterCopyright"
        style="@style/DefaultNormalTextView"
        android:text="@string/footer_copyright"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/footer_vertical_padding"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/tvFooterPrivacyPolicy"
            style="@style/HighLightSmallTextView"
            android:text="@string/footer_privacy_policy"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_padding"
            android:background="@color/footer_item_separator_background_color"/>
        <TextView
            android:id="@+id/tvFooterTermOfUse"
            style="@style/HighLightSmallTextView"
            android:text="@string/footer_term_of_use"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_padding"
            android:background="@color/footer_item_separator_background_color"/>
        <TextView
            android:id="@+id/tvFooterFullVersion"
            style="@style/HighLightSmallTextView"
            android:text="@string/footer_full_version"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/tvFooterForDoctor"
            style="@style/HighLightSmallTextView"
            android:text="@string/footer_for_doctor"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_padding"
            android:background="@color/footer_item_separator_background_color"/>
        <TextView
            android:id="@+id/tvFooterForEasyCare"
            style="@style/HighLightSmallTextView"
            android:text="@string/footer_for_easycare"/>
    </LinearLayout>
</LinearLayout>