<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/common_padding"
            android:layout_marginRight="@dimen/common_padding">
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/senderAvatarThumb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitStart"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text="@string/sender_text_message"/>
                <TextView
                    android:id="@+id/tvSenderName"
                    style="@style/DefaultBoldNormalTextView"
                    android:layout_marginLeft="@dimen/common_padding_5dp"
                    android:gravity="top|left"
                    android:textColor="@color/textview_color_highlight"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/home_item_separator_size">
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text="@string/send_time_text_message"/>
                <TextView
                    android:id="@+id/tvSentTime"
                    style="@style/DefaultBoldNormalTextView"
                    android:layout_marginLeft="@dimen/common_padding_5dp"
                    android:gravity="top|left"
                    android:textColor="@color/textview_color_default"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/home_item_separator_size">
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text="@string/content_text_message"/>
                <TextView
                    android:id="@+id/tvContentMessage"
                    style="@style/DefaultBoldNormalTextView"
                    android:layout_marginLeft="@dimen/common_padding_5dp"
                    android:gravity="top|left"
                    android:textColor="@color/textview_color_default"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/home_item_separator_size">
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text="@string/place_examination_text_message"/>
                <TextView
                    android:id="@+id/tvPlaceExaminationTo"
                    style="@style/DefaultBoldNormalTextView"
                    android:layout_marginLeft="@dimen/common_padding_5dp"
                    android:gravity="top|left"
                    android:textColor="@color/textview_color_highlight"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/home_item_separator_size">
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text="@string/department_text_message"/>
                <TextView
                    android:id="@+id/tvDepartmentName"
                    style="@style/DefaultBoldNormalTextView"
                    android:layout_marginLeft="@dimen/common_padding_5dp"
                    android:gravity="top|left"
                    android:textColor="@color/textview_color_default"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/doctorListButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_padding">
                <TextView
                    android:id="@+id/tvDetailMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/detail_text_message"
                    android:textColor="@color/header_background_color"
                    android:textSize="@dimen/text_medium"
                    android:paddingLeft="@dimen/footer_vertical_padding"
                    android:paddingRight="@dimen/footer_vertical_padding"
                    android:background="@drawable/layout_item_selector_with_corner_hightlight_border"/>
                <TextView
                    android:id="@+id/tvDeleteMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/delete_text_message"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/header_background_color"
                    android:layout_marginLeft="@dimen/home_item_separator_size"
                    android:paddingLeft="@dimen/footer_vertical_padding"
                    android:paddingRight="@dimen/footer_vertical_padding"
                    android:background="@drawable/layout_item_selector_with_corner_hightlight_border"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/bottomIndicator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/footer_item_separator_background_color"
        android:layout_marginTop="@dimen/common_padding"
        android:layout_marginBottom="@dimen/common_padding"/>
    <View
        android:id="@+id/endOfListIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_padding"/>
</LinearLayout>