<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llStatisticLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/common_padding"
        android:layout_marginRight="@dimen/common_padding">
        <TextView
            style="@style/DefaultLargeTextView"
            android:layout_marginTop="@dimen/footer_vertical_padding"
            android:textStyle="bold"
            android:text="@string/statistic_common_info"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/footer_vertical_padding"
            android:background="@color/footer_item_separator_background_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_button_with_corner"
            android:paddingTop="@dimen/common_padding"
            android:paddingBottom="@dimen/common_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_detail_info"/>
                </FrameLayout>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:layout_width="120dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="@string/statistic_detail_info"/>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text=":"/>
                <TextView
                    android:id="@+id/tvStatisticDetailInfo"
                    style="@style/DefaultNormalTextView"
                    android:layout_marginLeft="@dimen/home_item_separator_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_padding">
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_seat_count"/>
                </FrameLayout>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:layout_width="120dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="@string/statistic_order_count"/>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text=":"/>
                <TextView
                    android:id="@+id/tvStatisticOrderCount"
                    style="@style/DefaultNormalTextView"
                    android:layout_marginLeft="@dimen/home_item_separator_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_padding">
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_waiting_for_approved"/>
                </FrameLayout>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:layout_width="120dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="@string/statistic_waiting_dating"/>
                <TextView
                    style="@style/DefaultNormalTextView"
                    android:text=":"/>
                <TextView
                    android:id="@+id/tvStatisticWaitingDating"
                    style="@style/DefaultNormalTextView"
                    android:layout_marginLeft="@dimen/home_item_separator_size"/>
                <TextView
                    android:id="@+id/tvStatisticSeeMore"
                    style="@style/HighLightNormalTextView"
                    android:layout_marginLeft="@dimen/home_item_separator_size"
                    android:text="@string/statistic_see_more"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            style="@style/DefaultNormalTextView"
            android:layout_marginTop="@dimen/footer_vertical_padding"/>
    </LinearLayout>
</FrameLayout>